--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
      -  name: Checkout source code
         uses: actions/checkout@v3
         with:
-          repository: openshiftdemo
+          repository: chandralek/openshiftdemo
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           run: ls -a
